# rustslicer

./: .gitignore  CHANGELOG.md  CONFIGURATION_GUIDE.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  GITHUB_SETUP.md  PROJECT_STATUS.txt  PROJECT_STRUCTURE.md  README.md  SLICING_IMPLEMENTATION.md  TESTING.md
benches/: slicing_performance.rs
examples/configs/: default.toml  default_profile.toml  enhanced_profile.toml  fast_draft.toml  high_quality.toml  petg_profile.toml
examples/models/: calibration_cube.gcode  calibration_cube.stl  generate_cube.py
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: analyze.rs  config.rs  info.rs  mod.rs  preview.rs  profiles.rs  slice.rs  validate.rs
src/config/: mod.rs  mod.rs.backup
src/error/: mod.rs
src/gcode/: mod.rs
src/geometry/: mod.rs
src/slicer/: mod.rs  mod.rs.backup
tests/: config_tests.rs  geometry_tests.rs  integration_test.rs  slicing_tests.rs
