[package]
name = "rustslicer"
version = "0.1.0"
edition = "2021"
authors = ["Philipp <philipp@example.com>"]
description = "A high-performance 3D slicer CLI tool written in Rust that converts STL files to G-code"
license = "MIT"
repository = "https://github.com/1cedsoda/rustslicer"
keywords = ["3d-printing", "slicer", "gcode", "stl", "cli"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nalgebra = "0.32"
stl_io = "0.7"
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rustslicer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
